Migrated tests from JUnit 4 to JUnit 5 : Best practices [OPTIONAL]
Temp